--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <!-- TODO: Add a profile image with class 'profile-img' -->
              <img src="https://via.placeholder.com/150" alt="Profile Image" class="profile-img">
-            <h1 class="profile-name">Alex Johnson</h1>
+            <h1 class="profile-name">Maureen Mbuvi/h1>
             <p class="profile-title">Frontend Developer</p>
         </header>
         
